# tokie

./: .gitignore  CATSU_TOKENIZERS_TODO.md  Cargo.toml  MIGRATION.md  README.md  TOKENIZERS.md  tokenizers.json
.github/workflows/: release.yml  speed-regression.yml
crates/pretokie/: Cargo.toml  README.md  pretok.md
crates/pretokie/examples/: bench_branchless.rs  bench_callback.rs  bench_cycles.rs  bench_extract.rs  bench_fused.rs  bench_simd_full.rs  bench_simd_hybrid.rs  bench_simd_scan.rs  bench_simd_transitions.rs  bench_specialized.rs  check_piece.rs  verify_vs_hf.rs
crates/pretokie/src/: lib.rs  util.rs
crates/tokie/: Cargo.toml
crates/tokie-python/: Cargo.toml  README_PYPI.md  pyproject.toml  tokie.pyi
crates/tokie-python/examples/: basic_usage.py  batch_processing.py  migration_from_hf.py
crates/tokie-python/src/: lib.rs
crates/tokie-python/tests/: test_tokenizer.py
crates/tokie/benches/: tokenize.rs
crates/tokie/examples/: basic_usage.rs  batch_processing.rs  bench_tiktoken_load.rs  check_models.rs  convert_and_verify.rs  cross_encoder.rs  diagnose_failures.rs  padding_truncation.rs  regenerate_from_json.rs  speed_regression.rs
crates/tokie/src/: decoder.rs  hf.rs  hub.rs  lib.rs  normalizer.rs  padding.rs  postprocessor.rs  pretok.rs  serde.rs  tokenizer.rs
scripts/: bench_for_readme.py  generate_charts.py  populate_new_repos.py  upload_tkz_to_hf.py
src/: bpe.rs  decoder.rs  hf.rs  hub.rs  lib.rs  pretokenizer.rs  serde.rs  tokenizer.rs
src/encoder/: unigram.rs
src/pretok/: gpt2.rs  lexer.rs  mod.rs  regex.rs
(+21 files in other folders)
